[package]
name = "magick_rust"
version = "0.16.0"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Selection of Rust bindings for the ImageMagick library."
homepage = "https://github.com/nlfiedler/magick-rust"
repository = "https://github.com/nlfiedler/magick-rust.git"
readme = "README.md"
license = "Apache-2.0"
keywords = ["magickwand", "imagemagick"]
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = {version = "0.59", default-features = false, features = ["logging", "clap", "which-rustfmt"]}
pkg-config = "0.3"

[features]
default = ["bindgen/runtime"]
# Workaround for bindgen bug when ImageMagick is compiled with disable-hdri
disable-hdri = []
static = ["bindgen/dynamic"]
